# code-puppy-gui-git

./: .gitignore  MOBILE_RELEASE_DRY_RUN.md  NEXT_STEPS_ON_YOUR_MACHINE.md  QA_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  STORE_ASSETS_CHECKLIST.md  fly.toml  index.html  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-web.yml  mobile-build.yml
backend/: Dockerfile  __init__.py  app.py  attachments_service.py  auth_service.py  config.py  models.py  provider_service.py  requirements.txt  session_service.py  upload_service.py  worker_service.py
docs/: +not-found.html  404.html  _sitemap.html  about.html  auth.html  debug-storage.html  index.html  loading.html  sessions.html  settings.html
docs/_expo/static/js/web/: entry-07b213690471393a28acdcf2675daa48.js  (+23 more)
docs/auth/: callback.html
mobile/: .gitignore  .prettierrc.json  App.tsx  README.md  app.config.ts  eas.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  about.tsx  auth.tsx  debug-storage.tsx  index.tsx  loading.tsx  sessions.tsx  settings.tsx
mobile/app/auth/: callback.tsx
mobile/assets/: README.md
mobile/src/components/: AppShell.tsx
mobile/src/hooks/: useChat.ts
mobile/src/lib/: api.ts  attachments.ts  auth.ts  config.ts  device.ts  devicePaths.ts  localSessions.ts  preferences.ts  sessionMaintenance.ts  sessions.ts  storage.ts
src/code_puppy_gui/: __init__.py  app.py  worker.py
tests/: test_api.py  test_attachments.py  test_provider_service.py  test_sessions.py  test_upload_auth.py
